2004-11-19  Michael Koch  <konqueror@gmx.de>

	* batch_run: Added gnu.testlet.TestResult and gnu.testlet.TestReport
	to framework classes.

2004-11-19  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/nio/charset/Charset/forName.java:
	New testcases.

2004-11-19  Casey Marshall  <csm@gnu.org>

	* gnu/testlet/java/util/Timer/taskException.java:
	New testcase.

2004-11-18  Noa Resare  <noa@resare.com>

	* gnu/testlet/java/util/Calendar/set.java:
	Explicitly set TimeZone.

2004-11-17  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/io/BufferedInputStream/Skip.java: New Testcase.

2004-11-17  Noa Resare  <noa@resare.com>

	* gnu/testlet/java/util/Calendar/set.java:
	New testcase.

2004-11-17  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/SwingUtilities/computeIntersection.java,
	gnu/testlet/javax/swing/SwingUtilities/computeUnion.java, 
	gnu/testlet/javax/swing/SwingUtilities/isRectangleContainingRectangle.java:
	New tests.
	
2004-11-17  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/InetSocketAddress/InetSocketAddressTest.java:
	Fixed logic of testcase.

2004-11-17  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/Socket/SocketTest.java:
	Make testcase work with SUN JDK too.

2004-11-17  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/URL/URLTest.java: Rewrote some testcase and add
	one new for Classpath bug #10157.

2004-11-17  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/InetAddress/IPv6.java: New testcases.

2004-11-15  Michael Koch  <konqueror@gmx.de>

	* configure.in: Change default mail host from '/tmp' (?) to
	'mx10.gnu.org'as stated by configure --help.
	* configure: Regenerated.

2004-11-14  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/equals.java: 
	added check for scanlineStride.
	
2004-11-14  Noa Resare  <noa@resare.com>

	* gnu/testlet/java/text/SimpleDateFormat/parse.java:
	New tests.
