@@ -1,3 +1,7 @@
+2004-11-22  Noa Resare  <noa@resare.com>
+
+	* gnu/testlet/java/util/Calendar/set.java: New testcases.
+
 2004-11-19  Michael Koch  <konqueror@gmx.de>
 
 	* batch_run: Added gnu.testlet.TestResult and gnu.testlet.TestReport
